Fixed how the account type is assigned to the account type combo when it is a loan

BUG:246815

svn path=/trunk/extragear/office/kmymoney/; revision=1159736